# Teemo-Lab

./: README.md  environment.yml  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: teemolab.yml
experiments/beomjun/notebooks/: 20240911-hall_of_shame.ipynb  get_matches.ipynb
experiments/junseok/: get_match_data.py
experiments/junseok/exports/match_infos/PLATINUM_I/: KR_6599121592.csv  KR_6600597538.csv  KR_6600630437.csv  KR_6600656642.csv  KR_6600684199.csv  KR_6600972141.csv  KR_6602411206.csv  KR_6602412374.csv  KR_6602427183.csv  KR_6642413970.csv  KR_6642471990.csv  KR_6692302388.csv  KR_6692365433.csv  KR_6692439070.csv  KR_6692544052.csv  KR_6692624876.csv  KR_6697418677.csv  KR_6697470213.csv  KR_6697550311.csv  KR_6697632105.csv  KR_6698688694.csv  KR_6717392337.csv  KR_6717454929.csv  KR_6734120288.csv  KR_6734200760.csv  KR_6749437712.csv  KR_6749481944.csv  KR_6749530735.csv  KR_6758314665.csv  KR_6758356660.csv  KR_6758375958.csv  KR_6758414652.csv  KR_6758424811.csv  KR_6758456158.csv  KR_6764074184.csv  (+375 more)
experiments/junseok/exports/summoner_ids/: GOLD_III_summoner_ids.txt  GOLD_II_summoner_ids.txt  GOLD_I_summoner_ids.txt  PLATINUM_III_summoner_ids.txt  PLATINUM_II_summoner_ids.txt  PLATINUM_I_summoner_ids.txt
experiments/yongbeom/: .env  get_summoner.py  requirements.txt
exports/hall_of_shame/samples/: 20240911-death.csv
exports/samples/hall_of_shame/: 20240911-death_per_min.csv  20240911-duration.csv  20240911-win.csv
scripts/: py_packages.txt
teemolab/utils/: core.py
tests/utils/: test_core.py
